# lomekragow-eapp

./: Cargo.toml  LICENSE  README.md  README_chs.md
.github/workflows/: release.yml
crates/auto-script/: Cargo.toml  build.rs
crates/auto-script/src/: app.rs  auto_script.rs  highlight.rs  main.rs  script_executor.rs  script_manager.rs
crates/auto-script/src/auto_script/: binding.rs  console.rs  mod.rs  script_editor.rs  script_executor.rs  script_manager.rs
crates/eapp-utils/: Cargo.toml
crates/eapp-utils/src/: animation.rs  borderless.rs  codicons.rs  delayed_toggle.rs  lib.rs  natordset.rs  platform.rs  task.rs  ui_font_selector.rs  waker.rs  widgets.rs
crates/eapp-utils/src/easy_mark/: mod.rs  parser.rs  viewer.rs
crates/eapp-utils/src/global_hotkey/: mod.rs  ui.rs
crates/eapp-utils/src/widgets/: mod.rs  progress_bar.rs  simple_widgets.rs
crates/image-viewer/: Cargo.toml  build.rs
crates/image-viewer/src/: app.rs  img_finder.rs  lifo.rs  main.rs
crates/lonote/: Cargo.toml  build.rs
crates/lonote/src/: app.rs  codec.rs  main.rs
crates/manga-reader/: Cargo.toml  build.rs
crates/manga-reader/src/: app.rs  img_finder.rs  img_translation.rs  img_utils.rs  lifo.rs  main.rs  tex_loader.rs
crates/mychat/: Cargo.toml  build.rs
crates/mychat/src/: main.rs
crates/mychat/src/app/: bottom_panel.rs  left_panel.rs  mod.rs  right_panel.rs  setting.rs
crates/mychat/src/chat/: config.rs  dialogue.rs  dialogue_manager.rs  dialogue_task.rs  mod.rs
crates/save-manager/: Cargo.toml  build.rs
crates/save-manager/src/: app.rs  main.rs  save_manager.rs
crates/script-caller/: Cargo.toml  build.rs
crates/script-caller/src/: app.rs  main.rs  script.rs
crates/syncer/: Cargo.toml  build.rs
crates/syncer/src/: app.rs  main.rs  sync.rs
crates/your-player/: Cargo.toml  build.rs
crates/your-player/mpv/: mpv.lib
crates/your-player/src/: main.rs  playlist.rs  tex_register.rs
crates/your-player/src/app/: background.rs  contents.rs  mod.rs  opts_highlight.rs  playlist.rs  popups.rs
crates/your-player/src/danmu/: emit.rs  font_atlas.rs  font_def.rs  font_loader.rs  mod.rs
crates/your-player/src/mpv/: mod.rs  player.rs  preview.rs
