[workspace]

members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
eframe = { git = "https://github.com/Chaojimengnan/egui", branch = "self-use", default-features = false }
eapp-utils = { version = "0.1.0", path = "crates/eapp-utils", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
simplelog = { version = "0.12.2", default-features = false, features = [
    "local-offset",
] }
log = "*"
anyhow = "1.0"
