[workspace]

members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
# eframe = { git = "https://github.com/Chaojimengnan/egui", branch = "self-use", default-features = false }
eframe = { version = "0.31.1", default-features = false }
eapp-utils = { version = "1.0.0", path = "crates/eapp-utils", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
simplelog = { version = "0.12.2", default-features = false, features = [
    "local-offset",
] }
log = "*"
anyhow = "1.0"

[profile.release]
lto = true
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
codegen-units = 1
panic = "abort"
