[workspace]

members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
# eframe = { git = "https://github.com/Chaojimengnan/egui", branch = "self-use", default-features = false }
eframe = { version = "0.32", default-features = false }
egui_extras = { version = "0.32", default-features = false, features = [
    "syntect",
] }
egui_commonmark = { version = "0.21", features = [
    "better_syntax_highlighting",
] }
eapp-utils = { version = "1.0.5", path = "crates/eapp-utils", default-features = false, features = [
    "default_fonts",
    "hotkey",
] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
simplelog = { version = "0.12.2", default-features = false, features = [
    "local-offset",
] }
log = "*"
anyhow = "1.0"
rfd = "0.13"

[profile.release]
lto = true
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
codegen-units = 1
panic = "unwind"
