[package]
name = "auto-script"
version = "1.0.3"
edition = "2024"
license = "GPL-3.0-or-later"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
eapp-utils.workspace = true
eframe.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
mlua = { version = "0.10", features = ["lua54", "vendored"] }
rustautogui = { version = "2.5" }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52"
features = ["Win32_System_Registry", "Win32_UI_Shell", "Win32_Foundation"]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
