[package]
name = "eapp-utils"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default_fonts = ["eframe/default_fonts"]


[dependencies]
eframe = { workspace = true, features = ["glow", "persistence"] }
simplelog.workspace = true
log.workspace = true
serde.workspace = true
include-flate = "0.3.0"
natord = "1.0"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52"
features = ["Win32_System_Power"]
