[package]
name = "eapp-utils"
version = "1.0.5"
edition = "2024"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default_fonts = ["eframe/default_fonts"]
hotkey = ["global-hotkey"]

[dependencies]
eframe = { workspace = true, features = [
    "glow",
    "persistence",
    "wayland",
    "x11",
] }
simplelog.workspace = true
log.workspace = true
serde.workspace = true
rfd.workspace = true
include-flate = "0.3.0"
natord = "1.0"
global-hotkey = { version = "0.7", optional = true, features = ["serde"] }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52"
features = ["Win32_System_Power"]
