[package]
name = "image-viewer"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
eapp-utils.workspace = true
eframe.workspace = true
serde.workspace = true
image = { version = "0.24", default-features = false, features = ["default"] }
walkdir = "2.5.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
