[package]
name = "lonote"
version = "1.0.3"
edition = "2024"
license = "GPL-3.0-or-later"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
eapp-utils.workspace = true
eframe.workspace = true
rfd.workspace = true
encoding_rs = "0.8.33"
chardetng = "0.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
