[package]
name = "mychat"
version = "1.0.1"
edition = "2024"
license = "GPL-3.0-or-later"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
eapp-utils.workspace = true
egui_commonmark.workspace = true
eframe.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
futures-util = "0.3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
