[package]
name = "save-manager"
version = "1.0.5"
edition = "2024"
license = "GPL-3.0-or-later"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
eapp-utils.workspace = true
eframe.workspace = true
serde.workspace = true
rfd.workspace = true
regex = "1.10.3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
