[package]
name = "script-caller"
version = "0.1.0"
edition = "2024"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
eapp-utils.workspace = true
eframe.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52"
features = ["Win32_System_Registry", "Win32_UI_Shell", "Win32_Foundation"]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
