[package]
name = "syncer"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
eapp-utils.workspace = true
eframe.workspace = true
serde.workspace = true
walkdir = "2.5.0"
rfd = "0.13"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
