[package]
name = "your-player"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
eapp-utils.workspace = true
eframe.workspace = true
serde.workspace = true
serde_json.workspace = true
libmpv = { git = "https://github.com/Chaojimengnan/libmpv-rs", branch = "self-use" }
walkdir = "2.5.0"
swash = "0.1.12"
regex = "1.10.3"
ordered-float = "4.2.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
